# diced

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  Cargo.toml  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python.yml  rust.yml  test.yml
diced/: Cargo.toml
diced-py/: .gitignore  Cargo.toml  README.md
diced-py/diced/: __init__.py  lib.pyi  lib.rs
diced-py/diced/tests/: __init__.py  requirements.txt  test_doctest.py  test_scan.py  unittest.rs
diced-py/diced/tests/data/: Aquifex_aeolicus_VF5.fna
diced/examples/: gff.rs
diced/src/: lib.rs  region.rs
diced/tests/: aquifex.rs  clostridioides.rs
diced/tests/data/: NZ_CP019870.1.gff  NZ_CP019870.1.minRL30.minSL10.maxSL60.gff
docs/: conf.py  index.rst  install.rst  requirements.txt
docs/_static/json/: switcher.json
docs/api/: crispr.rst  index.rst  region.rst  repeats.rst  scanner.rst  spacers.rst
docs/guide/: copyright.rst  index.rst  install.rst
examples/: gff.rs
src/: lib.rs
tests/: aquifex.rs  clostridioides.rs
tests/data/: Aquifex_aeolicus_VF5.maxSL30.gff  Aquifex_aeolicus_VF5.maxSL34.minSL20.minNR4.minRL20.maxRL40.gff  Aquifex_aeolicus_VF5.minRL30.maxRL40.gff  Aquifex_aeolicus_VF5.searchWL6.gff  NZ_CP019870.1.fna  NZ_CP019870.1.minSL10.maxSL60.gff
