# https://gist.github.com/althonos/6914b896789d3f2078d1e6237642c35c

# --- Setuptools metadata ---------------------------------------------------

[metadata]
name = diced
author = Martin Larralde
version = attr: diced.__version__
author_email = martin.larralde@embl.de
home_page = https://github.com/althonos/diced
description = Rust re-implementation of the MinCED algorithm to Detect Instances of CRISPRs in Environmental Data.
long_description = file: diced-py/README.md
long_description_content_type = text/markdown
license = MIT OR GPL-3.0-or-later
platform = any
keywords = bioinformatics, genomics, motif, pssm, matrix
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Rust
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Medical Science Apps.
    Topic :: Software Development :: Libraries :: Python Modules
    # Typing :: Typed
project_urls =
    Bug Tracker = https://github.com/althonos/diced/issues
    Changelog = https://github.com/althonos/diced/blob/master/CHANGELOG.md
    Coverage = https://codecov.io/gh/althonos/diced/
    Builds = https://github.com/althonos/diced/actions/
    PyPI = https://pypi.org/project/diced

[options]
zip_safe = true
packages =
    diced
    diced.tests
    diced.tests.data
test_suite = diced.tests
python_requires = >=3.7
setup_requires =
    setuptools >=39.2
    setuptools-rust >=1.0

[options.package_data]
diced =
    py.typed
    *.pyi
    *.py
diced.lib =
    *.rs
diced.tests =
    *.rs
    requirements.txt

[bdist_wheel]
universal = false

[build_rust]
release = true


# --- Python tools configuration --------------------------------------------

[coverage:report]
show_missing = true
exclude_lines =
    pragma: no cover
    if typing.TYPE_CHECKING:
    @abc.abstractmethod
    @abc.abstractproperty
    raise NotImplementedError
    return NotImplemented
    raise UnexpectedError
    raise AllocationError

[mypy]
disallow_any_decorated = true
disallow_any_generics = true
disallow_any_unimported = false
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true

[mypy-diced.tests.*]
ignore_errors = True
