[package]
name = "diced-py"
version = "0.1.0"
authors = ["Martin Larralde <martin.larralde@embl.de>"]
edition = "2021"
license = "GPL-3.0-or-later"
description = "PyO3 bindings and Python interface to the diced crate."
repository = "https://github.com/althonos/diced"
homepage = "https://github.com/althonos/lightmotif/tree/main/diced-py"
readme = "README.md"
categories = ["science"]
keywords = ["bioinformatics", "python", "bindings", "pssm"]

[lib]
crate-type = ["cdylib", "rlib"]
path = "diced/lib.rs"
doctest = false

[dependencies.diced]
path = "../diced"
version = "0.1.0"

[dependencies]
pyo3 = "0.21.2"

[features]
default = []
built = []
extension-module = ["pyo3/extension-module"]
nightly = ["pyo3/nightly"]

[[test]]
name = "unittest"
path = "diced/tests/unittest.rs"
harness = false
